# api/router.go
@@ -21,6 +21,7 @@ func InitRouters(db *db.WrapDb, cache map[string]uint64) http.Handler {
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	handler := NewHandler(db, cache)
+	router.POST("/api/v1/invite/tasks", handler.GetTasks)
 	router.GET("/api/v1/invite/userStatus", handler.GetUserStatus)
 
 	router.POST("/api/v1/invite/bind", handler.HandlePostBind)
